scripts/nullaway/wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8.txt
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Meld.java:152: error: [NullAway] dereferenced expression tile is @Nullable
            if (tile.colour != run.get(0).colour)
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Meld.java:163: error: [NullAway] dereferenced expression tile is @Nullable
            if (tile.number != group.get(0).number)
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Set.java:57: error: [NullAway] dereferenced expression raw is @Nullable
        tokens = raw.split("\\s+|\\[|\\]");
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Tile.java:77: error: [NullAway] dereferenced expression raw is @Nullable
        this.colour = raw.charAt(0);
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:43: error: [NullAway] assigning @Nullable expression to @NonNull field
        mySocket = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
        inbox = null;
              ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:45: error: [NullAway] assigning @Nullable expression to @NonNull field
        outbox = null;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
        game = null;
             ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:90: error: [NullAway] dereferenced expression hand is @Nullable
            while (hand.getNumTiles() > 0) {
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java:56: error: [NullAway] dereferenced expression encodedGame is @Nullable
        tokens = encodedGame.split(",");
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java:151: error: [NullAway] enhanced-for expression melds is @Nullable
        for (Set set : melds) usedTiles.addAll(set.getTiles());
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:29: error: [NullAway] initializer method does not guarantee @NonNull field client (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RAIclient(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull String serverIP,  @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull int port) {
           ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:34: error: [NullAway] assigning @Nullable expression to @NonNull field
            game = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
            hand = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:189: error: [NullAway] enhanced-for expression melds is @Nullable
        for (Meld meld : melds) printStatus("Play: " + meld.toString());
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:213: error: [NullAway] dereferenced expression finalScores is @Nullable
                displayFinalScores(finalScores.trim());
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:106: error: [NullAway] assigning @Nullable expression to @NonNull field
        serverSocket = null;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:110: error: [NullAway] assigning @Nullable expression to @NonNull field
        pool = null;
             ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:111: error: [NullAway] assigning @Nullable expression to @NonNull field
        hands = null;
              ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:112: error: [NullAway] assigning @Nullable expression to @NonNull field
        game = null;
             ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:263: error: [NullAway] dereferenced expression message is @Nullable
        if (message.equalsIgnoreCase("draw"))
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:280: error: [NullAway] dereferenced expression nextTile is @Nullable
        outbox[turn].println(nextTile.toString());
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Move.java:101: error: [NullAway] dereferenced expression endPositions.get(key) is @Nullable
            for (int j = 0; j < endPositions.get(key).size(); j++) {
                                                     ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
23 errors
